--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
   </head>
   <body style="font-family: Arial, Verdana, Tahoma; color: #333; background-color: #fff; max-width: 900px; margin: auto; padding: 2rem;">
     
