--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
         font-family: Arial, Verdana, Tahoma, sans-serif;
         color: #333;
         background-color: #fff;
-        max-width: 900px;
+        width: 90%;
+        max-width: 1200px;
         margin: auto;
       }
 
