--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,11 +85,11 @@
 
       <!-- Navigation menu -->
       <nav id="nav-menu" style="display: flex;">
-        <a href="/" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">index.md</a>
-        <a href="/Nosotros" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">nosotros.md</a>
-        <a href="/Productos" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">productos.md</a>
-        <a href="/Sucursales" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">sucursales.md</a>
-        <a href="/Contacto" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">contacto.md</a>
+        <a href="/index.md" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">Inicio</a>
+        <a href="/nosotros.md" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">Nosotros</a>
+        <a href="/productos.md" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">Productos</a>
+        <a href="/sucursales.md" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">Sucursales</a>
+        <a href="/contacto.md" style="color: white; text-decoration: none; margin: 0 20px; font-family: 'Trebuchet MS', Georgia, serif; font-weight: 700; font-size: 1.1rem; text-transform: uppercase;">Contacto</a>
       </nav>
     </header>
 
