--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 
   .sticky-note {
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 0;
     box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.15);
     margin: 30px auto;
     max-width: 700px;
