--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -198,6 +198,9 @@
         top: -8px;
       }
     }
+    main {
+      margin-bottom: 60px;
+    }
   </style>
 </head>
 <body>
@@ -217,7 +220,6 @@
 
   <main>
     {{content}}
-    {margin-bottom: 60px;}
   </main>
 
   <footer style="text-align: center; padding: 20px 0; border-top: 1px solid #ccc; color: #666; font-size: 14px;">
