--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ page.title }}</title>
 
+  {% if page.css %}
+  <link rel="stylesheet" href="{{ page.css }}" />
+{% endif %}
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Poppins:wght@300&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
