--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 220px; /* Ajusta si necesitas más o menos espacio */
+  height: 200px;
   overflow: hidden;
 }
 
@@ -68,4 +68,5 @@
   color: #333;
   padding: 0 0.5rem;
 }
+
 
